--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
   <div class="card">
     <h1>Fibonacci Sequence Generator</h1>
-    <p>Enter the position of the sequence do you want to find below:</p>
+    <p>Enter the position of the sequence you want to find below:</p>
     <input type="text" class="form-control" placeholder="Enter a value" aria-label="Enter a value" aria-describedby="basic-addon2">
     <button onclick="fibonacciGenerator()" type="button" class="btn btn-outline-dark"><strong>START</strong></button>
     <!-- <input id="result" class="form-control" type="text" placeholder="" readonly> -->
